basic structure and style setup

--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
         <div class="container">
             <div class="inner-section">
                 <div class="logo-wrapper">
-                    <img src="./images/logo-navbar.png" alt="Site Logo">
+                    <img src="./images/TechWave.png" alt="Site Logo">
                 </div>
                 <div class="navigation-wrapper">
                     <ul>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">How It Works</a></li>
-                        <li><a href="#">Why It's Different</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#episodes">Episodes</a></li>
+                        <li><a href="#host">Host</a></li>
                     </ul>
                 </div>
                 <div class="btn-erly-access">
-                    <a class="btn btn-primary" href="#get-access">Get Early Access</a>
+                    <a class="btn btn-primary" href="#get-access">
+                        <span>Subscribe</span>
+                        <span class="arrow-icon">
+                            <svg fill="currentColor" viewBox="0 0 24 24" id="right" data-name="Flat Color" xmlns="http://www.w3.org/2000/svg" class="icon flat-color">
+                                <path id="primary" d="M21.71,11.29l-7-7a1,1,0,0,0-1.42,1.42L18.59,11H3a1,1,0,0,0,0,2H18.59l-5.3,5.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0l7-7A1,1,0,0,0,21.71,11.29Z"></path>
+                            </svg>
+                        </span>
+                    </a>
                 </div>
             </div>
         </div> 
@@ -33,32 +40,28 @@
         <!-- Hero Section -->
         <div class="hero-section">
             <div class="container">
-                <div class="inner-section">
-                    <div class="hero-text-wrapper">
-                        <div class="active-indicator">
-                            <span class="dot">
-                                <img src="./images/active indicator.png" alt="Green Dot">
-                            </span>
-                            <span class="indicator-text">Early Access Now Open</span>
-                        </div>
-                        <h1>Structured thinking</h1>
-                        <p>A private space to store notes, links, and learning summaries — designed to <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-                        <div class="button-wrapper">
-                            <a class="btn btn-primary" href="#">
-                                <span>Get Early Access</span>
-                                <span class="arrow-icon">
-                                    <img src="./images/ArrowRight.png" alt="Arrow Right Icon">
-                                </span>
-                            </a>
-                            <a class="btn btn-secondary" href="#">
-                                <span class="play-icon">
-                                    <img src="./images/play-button.png" alt="Play Icon">
-                                </span>
-                                <span>See How It Works</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="hero-circle">
+                <span class="inner-circle">
+                    <img src="./images/hero-circle.png" alt="Circle Image">
+                </span>
+                <span class="indicator-text">New</span>
+            </div>
+            <h1>Structured thinking</h1>
+            <p>A private space to store notes, links, and learning summaries — designed to <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div class="button-wrapper">
+                <a class="btn btn-primary" href="#">
+                    <span>Get Early Access</span>
+                    <span class="arrow-icon">
+                        <img src="./images/ArrowRight.png" alt="Arrow Right Icon">
+                    </span>
+                </a>
+                <a class="btn btn-secondary" href="#">
+                    <span class="play-icon">
+                        <img src="./images/play-button.png" alt="Play Icon">
+                    </span>
+                    <span>See How It Works</span>
+                </a>
+            </div>
             </div>
         </div>
         <!-- About Podcust -->
