--- a/index.html
+++ b/index.html
@@ -40,28 +40,37 @@
         <!-- Hero Section -->
         <div class="hero-section">
             <div class="container">
-            <div class="hero-circle">
-                <span class="inner-circle">
-                    <img src="./images/hero-circle.png" alt="Circle Image">
-                </span>
-                <span class="indicator-text">New</span>
-            </div>
-            <h1>Structured thinking</h1>
-            <p>A private space to store notes, links, and learning summaries — designed to <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <div class="button-wrapper">
-                <a class="btn btn-primary" href="#">
-                    <span>Get Early Access</span>
-                    <span class="arrow-icon">
-                        <img src="./images/ArrowRight.png" alt="Arrow Right Icon">
-                    </span>
-                </a>
-                <a class="btn btn-secondary" href="#">
-                    <span class="play-icon">
-                        <img src="./images/play-button.png" alt="Play Icon">
-                    </span>
-                    <span>See How It Works</span>
-                </a>
-            </div>
+                <div class="hero-inner">
+                    <div class="hero-circle">
+                        <span class="inner-circle">
+                            <div class="circle-gradient">
+                                <img src="./images/microphone.png" alt="Micorophone Image">
+                            </div>
+                            <!-- <img src="./images/hero-circle.png" alt="Circle Image"> -->
+                        </span>
+                        <span class="indicator-text">New</span>
+                    </div>
+                    <h1>TechWave</h1>
+                    <p>Your daily does of tech insights, productivity hack, and personal growth.</p>
+                    <div class="button-wrapper">
+                        <a class="btn btn-primary" href="#">
+                            <span class="spotify-icon">
+                                <svg fill="currentColor" viewBox="-2 -2 24 24" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin" class="jam jam-spotify">
+                                    <path d='M9.992 0C4.474 0 0 4.474 0 9.992c0 5.518 4.474 9.992 9.992 9.992 5.518 0 9.992-4.474 9.992-9.992C19.984 4.474 15.51 0 9.992 0zm4.348 15.683c-.127.329-.355.512-.59.512a.518.518 0 0 1-.344-.141c-1.796-1.588-3.87-1.843-5.294-1.778-1.578.073-2.735.544-2.747.549-.363.15-.74-.174-.839-.724-.1-.55.114-1.119.477-1.27.052-.022 1.297-.534 3.029-.62a8.939 8.939 0 0 1 2.917.32 8.09 8.09 0 0 1 3.146 1.737c.326.289.436.922.245 1.415zm1.27-3.063c-.15.329-.42.512-.699.512a.677.677 0 0 1-.407-.141c-2.127-1.588-4.584-1.843-6.271-1.778-1.87.073-3.24.544-3.253.549-.431.15-.876-.174-.995-.724-.118-.55.135-1.119.566-1.27.061-.022 1.536-.534 3.587-.62 1.208-.051 2.37.057 3.456.32 1.374.333 2.628.917 3.726 1.737.386.288.516.922.29 1.415zm.782-2.996a.958.958 0 0 1-.5-.142C10.835 6.404 4.276 8.234 4.21 8.252c-.528.153-1.075-.17-1.22-.721-.146-.551.165-1.12.693-1.272.076-.022 1.885-.534 4.4-.62a18.63 18.63 0 0 1 4.24.32c1.686.333 3.223.917 4.57 1.738.474.288.633.921.357 1.414a.985.985 0 0 1-.858.513z' />
+                                </svg>
+                            </span>
+                            <span>Listen On Spotify</span>
+                        </a>
+                        <a class="btn btn-secondary" href="#">
+                            <span class="email-icon">
+                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6zm3.519 0L12 11.671 18.481 6H5.52zM20 7.329l-7.341 6.424a1 1 0 0 1-1.318 0L4 7.329V18h16V7.329z" fill="currentColor"/>
+                                </svg>
+                            </span>
+                            <span>Subscribe</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- About Podcust -->
