--- a/index.html
+++ b/index.html
@@ -74,6 +74,41 @@
             </div>
         </div>
         <!-- About Podcust -->
+        <div class="about-podcust">
+            <div class="container">
+                <div class="about-inner">
+                    <div class="about-content-wrapper" id="about">
+                        <h2>About TechWave Podcast</h2>
+                        <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                        We break down complex topics into digestible insights, explore productivity strategies that actually work, 
+                        and share stories of personal growth from industry leaders.</p>
+                        <br>
+                        <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                    </div>
+                    <div class="empty-space"><span class="divider"></span></div>
+                    <div class="our-listeners">
+                        <div class="inner-grid">
+                            <div class="listener-item">
+                                <h2>150K+</h2>
+                                <p>Monthly Listeners </p>
+                            </div>
+                            <div class="listener-item">
+                                <h2>200+</h2>
+                                <p>Episodes Published</p>
+                            </div>
+                            <div class="listener-item">
+                                <h2>4.9<span>&#9733</span></h2>
+                                <p>Average Rating</p>
+                            </div>
+                            <div class="listener-item">
+                                <h2>50+</h2>
+                                <p>Industry Experts</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Why Choose -->
 
