update featured episode

--- a/index.html
+++ b/index.html
@@ -161,6 +161,65 @@
         </div>
 
         <!-- Featured Episodes -->
+         <div class="featured-episodes" id="episodes">
+            <div class="container">
+                <div class="section-header">
+                    <h2>Featured Episodes</h2>
+                </div>
+                <div class="episodes-grid">
+                    <div class="episode-card">
+                        <div class="youtube-video">
+                            <iframe
+                            width="100%"
+                            height="100%"
+                            src="https://www.youtube.com/embed/HHAExir3DBU?list=PL3Xso75sMgAG0egxTA3_Yv55bO6gDFrlH"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="autoplay; encrypted-media; picture-in-picture"
+                            allowfullscreen>
+                            </iframe>
+                        </div>
+                        <div class="episode-content">
+                            <h3>Episode 101: The Future of AI in Everyday Life</h3>
+                            <p>Explore how artificial intelligence is transforming our daily routines, from smart homes to personalized healthcare. Featuring insights from leading AI researchers and industry experts.</p>
+                        </div>
+                    </div>
+                    <div class="episode-card">
+                        <div class="youtube-video">
+                            <iframe
+                            width="100%"
+                            height="100%"
+                            src="https://www.youtube.com/embed/NwLW7AenmWU"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="autoplay; encrypted-media; picture-in-picture"
+                            allowfullscreen>
+                            </iframe>
+                        </div>
+                        <div class="episode-content">
+                            <h3>Episode 102: Productivity Hacks for Remote Work</h3>
+                            <p>Discover effective strategies to boost your productivity while working from home. Learn from top remote work advocates and successful entrepreneurs who have mastered the art of virtual collaboration.</p>
+                        </div>
+                    </div>
+                    <div class="episode-card">
+                        <div class="youtube-video">
+                            <iframe
+                            width="100%"
+                            height="100%"
+                            src="https://www.youtube.com/embed/RO14DsVxZtM"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="autoplay; encrypted-media; picture-in-picture"
+                            allowfullscreen>
+                            </iframe>
+                        </div>
+                        <div class="episode-content">
+                            <h3>Episode 103: Personal Growth Through Tech Innovation</h3>
+                            <p>Dive into stories of individuals who have leveraged technology to drive personal growth and career advancement. Hear from innovators who are shaping the future through tech.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         <!-- Meet Host -->
 
