Update the episod podcust section

--- a/index.html
+++ b/index.html
@@ -180,8 +180,12 @@
                             </iframe>
                         </div>
                         <div class="episode-content">
-                            <h3>Episode 101: The Future of AI in Everyday Life</h3>
-                            <p>Explore how artificial intelligence is transforming our daily routines, from smart homes to personalized healthcare. Featuring insights from leading AI researchers and industry experts.</p>
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            <div class="time">
+                                <span class="time-icon"><img src="./images/clock.png" alt="Time Icon"></span>
+                                <span>42 min</span>
+                            </div>
                         </div>
                     </div>
                     <div class="episode-card">
@@ -197,8 +201,12 @@
                             </iframe>
                         </div>
                         <div class="episode-content">
-                            <h3>Episode 102: Productivity Hacks for Remote Work</h3>
-                            <p>Discover effective strategies to boost your productivity while working from home. Learn from top remote work advocates and successful entrepreneurs who have mastered the art of virtual collaboration.</p>
+                            <h3>Building Better Habits for Remote Work</h3>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <div class="time">
+                                <span class="time-icon"><img src="./images/clock.png" alt="Time Icon"></span>
+                                <span>35 min</span>
+                            </div>
                         </div>
                     </div>
                     <div class="episode-card">
@@ -214,14 +222,41 @@
                             </iframe>
                         </div>
                         <div class="episode-content">
-                            <h3>Episode 103: Personal Growth Through Tech Innovation</h3>
-                            <p>Dive into stories of individuals who have leveraged technology to drive personal growth and career advancement. Hear from innovators who are shaping the future through tech.</p>
+                            <h3>Career Growth in Tech: A Roadmap</h3>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <div class="time">
+                                <span class="time-icon"><img src="./images/clock.png" alt="Time Icon"></span>
+                                <span>45 min</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
         <!-- Meet Host -->
+        <div class="meet-host" id="host">
+            <div class="container">
+                <div class="host-inner">
+                    <div class="host-image-wrapper">
+                        <img src="./images/host.png" alt="Host Image">
+                    </div>
+                    <div class="host-content-wrapper">
+                        <h2>Meet Your Host: Alex Johnson</h2>
+                        <p>Alex Johnson is a seasoned tech journalist and podcast host with over a decade of experience covering the technology industry. With a passion for storytelling and a knack for simplifying complex topics, Alex brings a unique perspective to TechWave.</p>
+                        <div class="host-social-icon">
+                            <ul>
+                                <li><a href="#"><img src="./images/linkedin.png" alt="LinkedIn"></a></li>
+                                <li><a href="#"><img src="./images/x.png" alt="Twitter"></a></li>
+                                <li><a href="#"><img src="./images/instagram.png" alt="Instagram"></a></li>
+                                <li><a href="#"><img src="./images/youtube.png" alt="YouTube"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="empty-space"></div>
+            </div>
+        </div>
 
     </main>
     <!-- Site Footer Section -->
