update footer section

--- a/index.html
+++ b/index.html
@@ -260,22 +260,43 @@
 
     </main>
     <!-- Site Footer Section -->
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="inner-section">
                 <div class="footer-logo-wrapper">
-                    <img src="./images/logo-footer.png" alt="Footer Logo">
+                    <img src="./images/TechWave.png" alt="Footer Logo">
                 </div>
                 <div class="footer-social-links">
-                    <h5>Social Links</h5>
                     <ul>
-                        <li><a href="#"><img src="./images/twitter.png" alt="Twitter"></a></li>
-                        <li><a href="#"><img src="./images/linkedin.png" alt="Linkdin"></a></li>
-                        <li><a href="#"><img src="./images/facebook.png" alt="Facebook"></a></li>
+                        <li>
+                            <a href="#">
+                                <span class="icon"><img src="./images/spotify.png" alt="Spotify"></span>
+                                <span class="text">Spotify</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="icon"><img src="./images/apple-podcast.png" alt="Apple podcast"></span>
+                                <span class="text">Apple</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="icon"><img src="./images/youtube-podcast.png" alt="YouTube podcast"></span>
+                                <span class="text">YouTube</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="icon"><img src="./images/twitter.png" alt="Twitter"></span>
+                                <span class="text">Twitter</span>
+                                
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="copyright-wrapper">
-                    <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+                    <p>&copy; 2026 TechWave Podcast. All rights reserved</p>
                 </div>
             </div>
         </div>
