update mobile and tablet responsive

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
                 <div class="logo-wrapper">
                     <img src="./images/TechWave.png" alt="Site Logo">
                 </div>
-                <div class="navigation-wrapper">
+                <div class="navigation-wrapper hide-mobile">
                     <ul>
                         <li><a href="#about">About</a></li>
                         <li><a href="#episodes">Episodes</a></li>
                         <li><a href="#host">Host</a></li>
                     </ul>
                 </div>
-                <div class="btn-erly-access">
+                <div class="btn-erly-access hide-mobile">
                     <a class="btn btn-primary" href="#get-access">
                         <span>Subscribe</span>
                         <span class="arrow-icon">
@@ -31,6 +31,11 @@
                             </svg>
                         </span>
                     </a>
+                </div>
+                <div class="hide-desktop">
+                    <button class="menu-icon">
+                        <img src="./images/hamburger-menu.png" alt="">
+                    </button>
                 </div>
             </div>
         </div> 
@@ -89,19 +94,19 @@
                     <div class="our-listeners">
                         <div class="inner-grid">
                             <div class="listener-item">
-                                <h2>150K+</h2>
+                                <h1>150K+</h1>
                                 <p>Monthly Listeners </p>
                             </div>
                             <div class="listener-item">
-                                <h2>200+</h2>
+                                <h1>200+</h1>
                                 <p>Episodes Published</p>
                             </div>
                             <div class="listener-item">
-                                <h2>4.9<span>&#9733</span></h2>
+                                <h1>4.9<span>&#9733</span></h1>
                                 <p>Average Rating</p>
                             </div>
                             <div class="listener-item">
-                                <h2>50+</h2>
+                                <h1>50+</h1>
                                 <p>Industry Experts</p>
                             </div>
                         </div>
@@ -237,13 +242,14 @@
         <!-- Meet Host -->
         <div class="meet-host" id="host">
             <div class="container">
+                <h1>Meet the Host</h1>
                 <div class="host-inner">
                     <div class="host-image-wrapper">
                         <img src="./images/host.png" alt="Host Image">
                     </div>
                     <div class="host-content-wrapper">
-                        <h2>Meet Your Host: Alex Johnson</h2>
-                        <p>Alex Johnson is a seasoned tech journalist and podcast host with over a decade of experience covering the technology industry. With a passion for storytelling and a knack for simplifying complex topics, Alex brings a unique perspective to TechWave.</p>
+                        <h2>Alex Kumar</h2>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                         <div class="host-social-icon">
                             <ul>
                                 <li><a href="#"><img src="./images/linkedin.png" alt="LinkedIn"></a></li>
@@ -277,7 +283,7 @@
                         <li>
                             <a href="#">
                                 <span class="icon"><img src="./images/apple-podcast.png" alt="Apple podcast"></span>
-                                <span class="text">Apple</span>
+                                <span class="text">Apple Podcast</span>
                             </a>
                         </li>
                         <li>
